hotfix(fix token parsing and documentation)
